bastion-host-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bastion-host-deployment
  labels:
    app: bastion-host-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bastion-host-pod
  template:
    metadata:
      labels:
        app: bastion-host-pod
    spec:
      containers:
      - name: bastion-host
        image: fedora
        command:
          - sleep
          - infinity
        imagePullPolicy: IfNotPresent
