dnsutils.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnsutils-deployment
  labels:
    app: dnsutils-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dnsutils-pod
  template:
    metadata:
      labels:
        app: dnsutils-pod
    spec:
      containers:
      - name: dnsutils
        image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
        command:
          - sleep
          - infinity
        imagePullPolicy: IfNotPresent
