fedora-deployment-config-map.yaml
# Need SETFCAP to install specific RPMs like uputils
# https://github.com/containers/podman/issues/5364
# oc adm policy add-scc-to-user privileged -z default
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedora-deployment
  labels:
    app: fedora-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fedora-pod
  template:
    metadata:
      labels:
        app: fedora-pod
    spec:
      containers:
      - name: fedora
        image: fedora
        command:
          - bash
          - /entrypoint-scripts/entrypoint.sh
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: entrypoint-scripts
          mountPath: /entrypoint-scripts
      volumes:
        - name: entrypoint-scripts
          configMap:
            name: entrypoint-scripts
