fedora-deployment-macvlan-0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fedora-deployment
  labels:
    app: fedora-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: fedora-pod
  template:
    metadata:
      labels:
        app: fedora-pod
      annotations:
        k8s.v1.cni.cncf.io/networks: macvlan-0
    spec:
      containers:
      - name: fedora
        image: fedora:latest
        command:
          - sleep
          - infinity
        imagePullPolicy: IfNotPresent
