ubuntu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  labels:
    app: ubuntu-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-pod
  template:
    metadata:
      labels:
        app: ubuntu-pod
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command:
          - sleep
          - infinity
        imagePullPolicy: IfNotPresent
