fh.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fh-deploymentconfig
  name: fh-service
spec:
  host: fh.apps.akaris.lab.pnq2.cee.redhat.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: fh-service
    weight: 100
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: fh-service
  labels:
    app: fh-deploymentconfig
spec:
  selector:
    app: fh-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: fh-deploymentconfig
  labels:
    app: fh-deploymentconfig
spec:
  replicas: 1
  selector:
    app: fh-pod
  template:
    metadata:
      labels:
        app: fh-pod
    spec:
      containers:
      - name: fh
        image: docker-registry.default.svc:5000/default/fh:latest
        imagePullPolicy: Always
